--- a/app/css/main.css
+++ b/app/css/main.css
@@ -39,3 +39,19 @@ h1 a:hover {
   background: #5bbec3;
   outline: 1px solid #000088;
 }
+.lightBg {
+  background: rgba(0, 0, 0, 0.6);
+}
+.vector-img {
+  margin-right: 40px;
+  text-align: center;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.6);
+  display: inline-block;
+}
+.vector-img img {
+  width: 100px;
+}
+.vector-img:hover {
+  background: rgba(39, 106, 34, 0.6);
+}
