--- a/less/main.less
+++ b/less/main.less
@@ -51,3 +51,19 @@ h1 {
   background: #5bbec3;
   outline: 1px solid #000088;
 }
+.lightBg{
+		background: rgba(0,0,0,0.6);
+	}
+.vector-img{
+	margin-right: 40px;
+	text-align: center;
+	color: #fff;
+	background: rgba(0,0,0,0.6);
+	display: inline-block;
+	img{
+		width: 100px;	
+	}
+	&:hover{
+		background: rgba(39,106,34,0.6);
+	}
+}
