--- a/less/mixins.less
+++ b/less/mixins.less
@@ -22,6 +22,17 @@
   height: auto;
 }
 
+.video-full-screen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1000;
+  overflow: hidden;
+}
 
 
 
