--- a/less/main.less
+++ b/less/main.less
@@ -271,7 +271,25 @@ h3{
 	font-weight: normal;
   }
 }
-
+.add-tag{
+	.table-div-col{
+	  vertical-align: middle;
+	}
+  .submit-add{
+	margin-left: 8px;
+	background: @plateBg;
+	border: none;
+	color: #fff;
+	padding: 7px;
+	.borderRad(6px);
+	&:hover{
+	  background: lighten(@headerWrapperBg,5%);
+	}
+	&:focus{
+	  outline: 0;
+	}
+  }
+}
 
 
 
